# tg-notifier-bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  tg_notifier.service
tg_notifier/: __init__.py  common.py  share.py  socketserver.py  tgclient.py  tguserbot.py
