[tool.poetry]
name = "telegram-client-bot"
version = "0.1.0"
description = ""
authors = ["Rist <www10177@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.34.0"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
