[tool.poetry]
name = "telegram-client-bot"
version = "0.1.0"
description = ""
authors = ["Rist <www10177@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Telethon = "^1.34.0"
python-dotenv = "^1.0.1"
duckdb = "^0.10.1"
python-telegram-bot = {extras = ["all"], version = "^21.0.1"}
starlette = "^0.37.2"
uvicorn = "^0.29.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
